# agentic-kg-qa

./: .env.example  .gitmodules  AGENTS.md  README.md  docker-compose.yaml  extraction.ipynb  pyproject.toml
experiments/: extraction.ipynb
services/: docker-compose.yaml
src/: bootstrap_data.py  ontology.ttl
src/mcp_server/: config.py  main.py
src/mcp_server/service/: embedding_service.py  fuseki_query_service.py  qdrant_query_service.py  validation_service.py
src/mcp_server/tool/: find_owner_tool.py  find_resource_owner_tool.py  find_resources_owned_by_team_tool.py  query_graph_tool.py  reason_graph_tool.py  search_entities_tool.py
src/strands/: __init__.py  graph_query_agent.py  knowledge_graph_researcher.py  llm.py  main.py  ownership_researcher.py  query_graph_agent.py  reporter_agent.py  search_entities_agent.py  search_entity_agent.py
src/ui/: app.py  runner.py
