[tool.poetry]
name = "extraction"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
rdflib = "^7.4.0"
qdrant-client = "^1.15.1"
litellm = "^1.79.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
bootstrap_data = "src.bootstrap_data:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
